fix: noedit inputs full width when on mobile

--- a/less/components/FormInput.less
+++ b/less/components/FormInput.less
@@ -83,7 +83,7 @@
 	font-size: @font-size-base;
 	line-height: @component-line-height;
 	height: @component-height;
-	// min-width: @input-noedit-width; // still unsure about this
+	min-width: @input-noedit-width; // still unsure about this
 	padding: 0 @input-padding-horizontal;
 	vertical-align: middle;
 	width: auto;
@@ -111,6 +111,12 @@
 	line-height: 1.3;
 	height: auto;
 	padding: .5em @input-padding-horizontal;
+}
+
+@media	(min-width: @screen-sm) {
+	.FormInput-noedit {
+		display: block;
+	}
 }
 
 
